[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Detection/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/gun_blast.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/bounce.wav" type="AudioStream" id=5]
[ext_resource path="res://Detection/Hurtbox.gd" type="Script" id=6]
[ext_resource path="res://Player/hurt.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "invincible"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="GunSpawnPoint" type="Position2D" parent="."]
position = Vector2( 5, 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="InvTimer" type="Timer" parent="Hurtbox"]
one_shot = true

[node name="Blast" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 30.0
__meta__ = {
"_editor_description_": "Timer For Powerup"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/invincible = SubResource( 4 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_shape_entered"]
[connection signal="invincibillity_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibillity_ended"]
[connection signal="invincibillity_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibillity_ended"]
[connection signal="invincibillity_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibillity_started"]
[connection signal="invincibillity_started" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibillity_started"]
[connection signal="timeout" from="Hurtbox/InvTimer" to="Hurtbox" method="_on_InvTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]

[editable path="Hurtbox"]
